refactor: useStructured DTO for product list inquire