@@ -2,8 +2,8 @@ package com.multicampus.gamesungcoding.a11ymarketserver.feature.product.service;
 
 import com.multicampus.gamesungcoding.a11ymarketserver.common.exception.DataNotFoundException;
 import com.multicampus.gamesungcoding.a11ymarketserver.feature.product.dto.ProductDetailResponse;
+import com.multicampus.gamesungcoding.a11ymarketserver.feature.product.dto.ProductResponse;
 import com.multicampus.gamesungcoding.a11ymarketserver.feature.product.entity.Product;
-import com.multicampus.gamesungcoding.a11ymarketserver.feature.product.dto.ProductDTO;
 import com.multicampus.gamesungcoding.a11ymarketserver.feature.product.repository.ProductAiSummaryRepository;
 import com.multicampus.gamesungcoding.a11ymarketserver.feature.product.repository.ProductImagesRepository;
 import com.multicampus.gamesungcoding.a11ymarketserver.feature.product.repository.ProductRepository;
@@ -13,7 +13,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * - search 파라미터 유무에 따라 전체/필터 조회
@@ -27,15 +26,15 @@ public class ProductService {
     private final ProductAiSummaryRepository productAiSummaryRepository;
 
     @Transactional(readOnly = true)
-    public List<ProductDTO> getProducts(String search, Boolean certified, String grade) {
+    public List<ProductResponse> getProducts(String search, Boolean certified, String grade) {
         final List<Product> products =
                 (search == null || search.isBlank())
-                        ? productRepository.findAll()
+                        ? productRepository.findAllWithDetails()
                         : productRepository.findFilteredProducts(search);
 
         return products.stream()
-                .map(ProductDTO::fromEntity)
-                .collect(Collectors.toList());
+                .map(ProductResponse::fromEntity)
+                .toList();
     }
 
     @Transactional(readOnly = true)
